--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -22,21 +22,21 @@
             android:orientation="vertical">
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/account_details_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginHorizontal="20dp"
                 app:cardBackgroundColor="@color/background">
 
                 <ImageView
                     android:id="@+id/expanded_background"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/exp_background"
+                    android:contentDescription="@string/account_details"
                     android:src="@drawable/expanded_background" />
 
                 <LinearLayout
+                    android:id="@+id/account_details_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
@@ -70,21 +70,21 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/setup_instructions_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_margin="20dp"
                 app:cardBackgroundColor="@color/background">
 
                 <ImageView
                     android:id="@+id/expanded_background2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/exp_background"
+                    android:contentDescription="@string/title_instructions"
                     android:src="@drawable/expanded_background" />
 
                 <LinearLayout
+                    android:id="@+id/instructions_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
