feat: exam mode added

--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -15,7 +15,8 @@
                 android:id="@+id/instructions_appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background">
+                android:background="@color/background"
+                app:elevation="0dp">
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/instructions_toolbar"
