--- a/app/src/main/res/menu/schedule_menu.xml
+++ b/app/src/main/res/menu/schedule_menu.xml
@@ -3,21 +3,16 @@
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
-        android:orderInCategory="4"
+        android:orderInCategory="3"
         android:title="@string/logout" />
 
     <item
-        android:id="@+id/notifications"
-        android:orderInCategory="1"
-        android:title="@string/notifications" />
-
-    <item
-        android:id="@+id/battery"
-        android:orderInCategory="2"
-        android:title="@string/battery" />
-
-    <item
         android:id="@+id/share"
-        android:orderInCategory="3"
+        android:orderInCategory="2"
         android:title="@string/share" />
+
+    <item
+        android:id="@+id/settings"
+        android:orderInCategory="1"
+        android:title="@string/settings" />
 </menu>
