--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,12 @@
         <item name="popupMenuBackground">@color/tab_back</item>
     </style>
 
+    <style name="Theme.VITTY.SettingsScreen" parent="Theme.VITTY">
+        <item name="colorSecondary">@color/translucent_imp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorSecondary">@color/translucent</item>
+    </style>
+
     <style name="TabTextAppearance" parent="">
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
