--- a/app/src/main/res/layout/dialog_setup_complete.xml
+++ b/app/src/main/res/layout/dialog_setup_complete.xml
@@ -30,8 +30,8 @@
                 android:layout_marginTop="22dp"
                 android:layout_marginBottom="10dp"
                 android:lineSpacingExtra="6dp"
-                android:textColor="@color/translucent_imp"
-                android:text="@string/complete_msg" />
+                android:text="@string/complete_msg"
+                android:textColor="@color/translucent_imp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
