--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -14,7 +14,7 @@
             android:clipToPadding="false"
             android:layoutAnimation="@anim/layout_animation"
             android:paddingTop="10dp"
-            android:paddingBottom="50dp"
+            android:paddingBottom="150dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <RelativeLayout
@@ -46,6 +46,7 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/quote_line"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/no_classes_today"
