--- a/app/src/main/res/layout/item_period.xml
+++ b/app/src/main/res/layout/item_period.xml
@@ -3,9 +3,9 @@
     android:id="@+id/item_period"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="15dp"
+    android:layout_marginStart="10dp"
     android:layout_marginTop="5dp"
-    android:layout_marginEnd="15dp"
+    android:layout_marginEnd="10dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/today_list_background"
     android:orientation="vertical">
@@ -14,10 +14,12 @@
         android:id="@+id/course_name_widget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:fontFamily="@font/poppins_600"
-        android:paddingStart="25dp"
-        android:paddingEnd="30dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="@string/sample_course"
         android:textColor="@color/white"
         android:textSize="16sp" />
@@ -26,10 +28,10 @@
         android:id="@+id/period_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="15dp"
-        android:paddingStart="25dp"
-        android:paddingEnd="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="12dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="@string/sample_time"
         android:textSize="15sp" />
 
